Assignment To sort Letters  and get count in given string and remove special characters.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /ConsoleApplication1/.vs/ConsoleApplication1/v14
 /ConsoleApplication1/ConsoleApplication1/bin/Debug
 /ConsoleApplication1/ConsoleApplication1/obj/Debug
+/BhagyoLetterCount/.vs/BhagyoLetterCount/v14
+/BhagyoLetterCount/BhagyoLetterCount/bin/Debug
+/BhagyoLetterCount/BhagyoLetterCount/obj/Debug
