--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /BhagyoLetterCount/.vs/BhagyoLetterCount/v14
 /BhagyoLetterCount/BhagyoLetterCount/bin/Debug
 /BhagyoLetterCount/BhagyoLetterCount/obj/Debug
+/PayalTestCode/.vs/PayalTestCode/v14
+/PayalTestCode/PayalTestCode/bin/Debug
+/PayalTestCode/PayalTestCode/obj/Debug
