I was create my branch  and add demo project....

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 /PayalTestCode/.vs/PayalTestCode/v14
 /PayalTestCode/PayalTestCode/bin/Debug
 /PayalTestCode/PayalTestCode/obj/Debug
+/SwapDemo/.vs/SwapDemo/v14
+/SwapDemo/SwapDemo/bin/Debug
+/SwapDemo/SwapDemo/obj/Debug
